Update tagline in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Ho_Chi_Minh
 
 title: qnv with forensics
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: A blog # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A place where i can write my experience with forensics
